# app/Http/Controllers/UserController.php
@@ -48,15 +48,16 @@ class UserController extends Controller
      *       @OA\Property(property="email", type="string", format="string", example="examples@gmail.com", description ="votre email"),
      *       @OA\Property(property="password", type="string", format="string", example="sdms", description ="votre password"),
      *       @OA\Property(property="phone", type="string", format="string", example="123456", description ="votre telephone"),
-     *       @OA\Property(property="role", type="string", format="string", example="simple utilisateur", description ="votre role"),
-     *       @OA\Property(property="state", type="string", format="string", example="actif/inactif", description ="votre etat"),
-     *       @OA\Property(property="birth_date", type="date", format="string", example="12/09/2023", description ="votre date de naissance"),            
+     *       @OA\Property(property="role", type="string", format="string", example="USER", description ="votre role"),
+     *       @OA\Property(property="state", type="string", format="string", example="ACTIF", description ="votre etat"),
+     *       @OA\Property(property="birth_date", type="date", format="string", example="2023-09-11", description ="votre date de naissance"),            
      *       @OA\Property(property="name_enterprise", type="string", format="string", example="santa lucia", description ="nom de votreentreprise"), 
      *       @OA\Property(property="siren", type="string", format="string", example="93984rhrfbdfn", description ="votre siren"),
      *       @OA\Property(property="commercial_register", type="string", format="string", example="RNNKNKD323", description ="votre RN"),  
      *       @OA\Property(property="address", type="string", format="string", example="54 rue saint augustin", description ="votre adresse"),
      *       @OA\Property(property="web_site", type="string", format="string", example="exemple.com", description ="votre site web"), 
      *       @OA\Property(property="description", type="string", format="string", example="information sur l'entreprise", description ="votre description"),
+     *      
      *  )
      *        ),
      *      ),
